Fix SchemaGenerator to use proper FastMcpException, integrate scanner/schema/handlers in FastMCP, add ARCHITECTURE.md