@@ -1,11 +1,26 @@
 package io.github.fastmcp.core;
 
-import java.lang.reflect.Constructor;
+import io.github.fastmcp.annotations.*;
+import io.github.fastmcp.scanner.AnnotationScanner;
+import io.github.fastmcp.schema.SchemaGenerator;
+import io.github.fastmcp.adapter.ToolHandler;
+import io.github.fastmcp.adapter.ArgumentBinder;
+import io.github.fastmcp.adapter.ResponseMarshaller;
+import io.github.fastmcp.model.ServerMeta;
+import io.github.fastmcp.model.ToolMeta;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import reactor.core.publisher.Mono;
+
+import java.lang.reflect.Method;
+import java.util.Map;
 
 public class FastMCP {
     private final Class<?> serverClass;
     private Object serverInstance;
     private TransportType transport = TransportType.STDIO;
+    private final AnnotationScanner scanner = new AnnotationScanner();
+    private final SchemaGenerator schemaGenerator = new SchemaGenerator();
+    private final ObjectMapper mapper = new ObjectMapper();
 
     private FastMCP(Class<?> serverClass) {
         this.serverClass = serverClass;
@@ -21,39 +36,48 @@ public class FastMCP {
 
     public McpAsyncServer build() {
         instantiateServer();
-        // Minimal skeleton: return a dummy async server
-        return new DummyMcpAsyncServer();
+        return new RealMcpAsyncServer();
     }
 
     private void instantiateServer() {
         try {
-            Constructor<?> ctor = serverClass.getDeclaredConstructor();
-            ctor.setAccessible(true);
-            serverInstance = ctor.newInstance();
+            serverInstance = serverClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException("Failed to instantiate server", e);
         }
     }
 
     public void run() {
-        McpAsyncServer server = build();
-        // Block briefly in this stub; in real impl would block until termination
-        server.awaitTermination();
+        build().awaitTermination();
     }
 
-    // Simple placeholder transport enum
-    public enum TransportType {
-        STDIO, HTTP_SSE, HTTP_STREAMABLE
-    }
+    private class RealMcpAsyncServer implements McpAsyncServer {
+        private ServerMeta meta;
 
-    private static class DummyMcpAsyncServer implements McpAsyncServer {
+        RealMcpAsyncServer() {
+            this.meta = scanner.scan(serverClass);
+        }
+
         @Override
         public void awaitTermination() {
-            // no-op for stub
+            // TODO: Implement actual server with MCP SDK
+            // For now, this is a placeholder that demonstrates the architecture
+            System.out.println("FastMCP server started with " + meta.getTools().size() + " tools");
+            System.out.println("Tools: " + meta.getTools().stream().map(ToolMeta::getName).toList());
         }
+
         @Override
         public void close() {
-            // no-op for stub
+            // TODO: Implement graceful shutdown
+        }
+
+        private Object createHandlerForTool(ToolMeta toolMeta) {
+            ToolHandler handler = new ToolHandler();
+            handler.instance = serverInstance;
+            handler.meta = toolMeta;
+            handler.binder = new ArgumentBinder();
+            handler.marshaller = new ResponseMarshaller();
+            return handler.asHandler();
         }
     }
 }
